[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgi-caches"
dynamic = ["version"]
description = "Server-side HTTP caching for ASGI applications, inspired by Django's cache framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matthew Messinger", email = "mattmess1221@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiocache>=0.12.3",
    "starlette==0.*",
]

[project.optional-dependencies]
redis = ["redis>=5"]
memcached = ["aiomcache>=0.5.2"]
msgpack = ["msgpack>=0.5.5"]

[project.urls]
Repository = "https://github.com/mattmess1221/asgi-caches"
Documentation = "https://mattmess1221.github.io/asgi-caches"
Issues = "https://github.com/mattmess1221/asgi-caches/issues"


[dependency-groups]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-rerunfailures",
    "httpx",
]

docs = [
    "mkdocs",
    "mkdocs-material",
]

lint = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "isort",
    "seed-isort-config",
]
types = [
    "mypy>=1.14.1",
]

[tool.uv]
default-groups = ["test", "lint"]

[tool.hatch.version]
path = "src/asgi_caches/__version__.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
# branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
allow_empty_bodies = true
